# ORBIS-Modellfabrik

./: .cursorcontext  .cursorignore  .cursorrules  .dockerignore  .eslintignore  .gitignore  .gitmodules  .nxignore  .pr-fix-ui-refresh-simplify  .pre-commit-config.yaml  .pylintrc  BUSINESS_FUNCTIONS_IMPLEMENTATION.md  CHANGELOG.md  CHAT_SUMMARY_FOR_NEW_SESSION.md  CLEANUP_SUMMARY.md  COMMIT_SUMMARY.md  COMMIT_SUMMARY_DASHBOARD2_FINAL.md  COMMIT_SUMMARY_SEQUENCE_CONTROL.md  COPILOT_PR_REQUEST_SHOPFLOOR_HIGHLIGHTING.md  DASHBOARD_DELETION_LIST.md  DASHBOARD_MIGRATION_PLAN.md  DEVELOPMENT_RULES.md  FINAL_IMPLEMENTATION_REPORT.md  FIX_SUMMARY.md  HANDLER_PERSISTENCE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPORT_FIX_TODO.md  Makefile  OBSOLETE_PR_ANALYSIS.md  OMF_ARCHITECTURE.md  OMF_DEVELOPMENT_RULES.md  PR_README.md  PR_SUMMARY.md  README.md  README_DOUBLE_CLICK_NAVIGATION.md  README_OMF_Dashboard.md  SOLUTION_DOCUMENTATION.md  SOLUTION_FLOW.md  TASK5_PLAN.md  (+169 more)
.github/: README.md  WORKFLOWS.md  WORKFLOW_GUIDELINES.md  ci-trigger-test.txt  pages-trigger-test.txt
.streamlit/: secrets.toml
config/: credentials.example.yml
deploy/: README.md  docker-compose.metrics.yml  docker-compose.osf-ui.yml
docs/: 99-glossary.md  ANALYSIS_OVERVIEW_TAB.md  CENTRAL_LOGGING_REFACTORING.md  CHANGELOG.md  DEEP_CLEANUP_ANALYSIS.md  DOUBLE_CLICK_MODULE_DETAILS.md  DOUBLE_CLICK_NAVIGATION.md  DOUBLE_CLICK_NAVIGATION_FLOW.md  FIXTURE_SYSTEM_FIX.md  IMPLEMENTATION_SUMMARY.md  INDEX.json  LOGGING_HANDLER_PERSISTENCE_FIX.md  MIGRATION_SHOPFLOOR_V2.md  MQTT_UI_REFRESH_SUMMARY.md  PLAN_MODULE_TAB_UNIFICATION.md  PLAN_OSF_REBRANDING.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  PR_SUMMARY_SHOPFLOOR_V2.md  PR_SUMMARY_SVG_STANDARDIZATION.md  README.md  ROUTE_FTS_ASSETS_PRODUCT_SIZING.md  SCREENSHOT_VERIFICATION_GUIDE.md  SHOPFLOOR_ROUTING_GUIDE.md  SVG_ICONS_USAGE_GUIDE.md  TASK13_PLAN_VS_STATUS.md  TASK13_STATUS_CHECK.md  TASK14_DOCUMENTATION_CLEANUP_INVENTORY.md  TASK14_DOCUMENTATION_CLEANUP_PLAN.md  color-migration-strategy.md  credentials.md  deployment-alternatives.md  dsp-architecture-component-spec.md  fixture-system-analysis.md  generate_index.py  github-pages-deployment.md  mqtt_ui_refresh.md  netlify-deployment.md  product_svg_standardization.md  svg-inventory.html  (+2 more)
docs-orbis/: README.md  chat.txt  mqtt-mocking-guide.md  traffic-logging-guide.md
docs_orbis/: DEVELOPMENT_RULES.md  IMPORT_STANDARDS_GUIDE.md  INDEX.html  INDEX.json  PROJECT_OVERVIEW.md  README.md  RELEASE_NOTES_PROCEDURE.md  auftrag-workflow-documentation.md  ccu-analysis-integration.md  ccu-analysis-troubleshooting.md  consolidated-workflow-documentation.md  copilot_push_test.md  credentials.md  critical-bug-fix-module-id-mapping.md  dashboard-filter-fix-summary.md  dashboard-refactoring-2025-01.md  dashboard-refactoring-overview-sections-2025-01.md  dashboard-status-2025-01.md  dashboard2-live-test-success-2025-01.md  dashboardv3.2.0-release-notes.md  dashboardv3.3.0-release-notes.md  dashboardv3.3.1-release-notes.md  developer_guide  documentation-consolidation-summary.md  drill-manual-control-guide.md  drill-quick-start.md  erp-integration-test-guide.md  erp-order-id-integration-guide.md  factory-reset-and-order-trigger.md  factory_steering_rules.md  fischertechnik-web-interface-analysis.md  fts-navigation-examples.md  generate_index.py  hbw-inventory-topics-analysis-2025-01.md  how-to-use-npm.md  implementierungs-roadmap.md  live-testing-guide.md  message-processor-pattern.md  module-configuration-guide.md  module-control-status-guide.md  (+35 more)
examples/: README_FACTORY_GRID.md  factory_grid.html  fts_route_example.py  requirements.txt  streamlit_factory_app.py
git-hooks/: pre-commit
integrations/: README.md
locale/: messages.de.json  messages.fr.json
logs/: app.jsonl  session_manager.jsonl
mqtt-data/: README.md
omf/: README.md  check_prerequisites.py  config_loader.py  format_code.py
omf2/: IMPLEMENTATION_STATUS.md  README.md  __init__.py  architektur-mqtt-gateay-streamlit.md  architektur-mqtt-gateway-streamlit.md  cop.md  example_usage.py  omf.py  omf_dashboard.py  projekt-struktur-omf2.md  refactoring-backlog-omf2.md
omf3/: README.md
osf/: README.md
osf-edge-persistence/: .env.example  .gitignore  README.md  docker-compose.yml  env.live  env.replay
scripts/: README-replay.md  add-missing-translations.mjs  add-node-to-user-path.ps1  aggregate_module_statistics.py  analyze_aiqs_sessions.py  analyze_dps_sessions.py  analyze_drill_sessions.py  analyze_fts_sessions.py  analyze_hbw_sessions.py  analyze_mill_sessions.py  analyze_retain_in_logs.py  analyze_session_fts_positions.py  build-osf-ui-docker.js  build_order_fixtures.py  check_heading_svgs.py  check_heading_svgs_omf3.py  check_heading_svgs_osf.py  check_session_inventory.py  create_track_trace_fixtures.py  deploy-gh-pages-test.bat  deploy-gh-pages-test.sh  deploy-osf-ui-to-rpi.js  export-dsp-architecture-svgs.js  export-network-topology-html.sh  export-presentation-checklist-html.sh  export-use-case-svgs.js  export_markdown_html.py  export_network_topology_html.py  generate-dsp-svg-diagrams.ts  generate-svg-inventory.js  mosquitto-ws-bridge.conf  mqtt-single-instance-check.sh  replay-sessions.ts  run-correlation-test.sh  run-omf3.bat  run-omf3.ps1  run-order-test.sh  run-osf.bat  run-osf.ps1  serve-local.bat  (+8 more)
session_manager/: README.md  __init__.py  app.py  mqtt_client.py  session_manager_settings.json  simple_mqtt_client.py
src-orbis/: README.md  check_prerequisites.py  comprehensive_mqtt_logger.py  mqtt_bridge_logger.py  mqtt_mock.py  mqtt_test_client.py  mqtt_traffic_analyzer.py  remote_mqtt_client.py  setup_mqtt_mock.py
src_orbis/: README.md  check_prerequisites.py  config_loader.py  debug_message_center.py  mock_mqtt_client.py  test_default_credentials.py  test_mqtt_replay.py
tests/: README.md  README_LOGGING_TESTS.md  manual_verify_handler_persistence.py  mock_mqtt_client.py  run_all_tests.py  test_admin_cache.py  test_business_functions_loader.py  test_refresh.py  (+10 more)
tests-orbis/: README.md  test_mock_mqtt_client.py
(+5789 files in other folders)
