[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbis-modellfabrik"
version = "3.2.0"
description = "ORBIS Modellfabrik Dashboard und Tools"
authors = [{name = "ORBIS Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "paho-mqtt>=1.6.1",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.2.0",
]

[tool.setuptools]
# Wir benutzen „flat layout“: Packages im Repo-Root finden (kein special 'src/')
# und nehmen alle, die mit 'src_orbis' anfangen.
[tool.setuptools.packages.find]
where = ["."]
include = ["src_orbis*"]

[tool.black]
line-length = 120
target-version = ['py38']
skip-string-normalization = true
# Wichtig: force-exclude wirkt auch dann, wenn Black per pre-commit einzelne Dateien übergeben bekommt
force-exclude = '''
(?x)
  src_orbis[\\/]+omf[\\/]+config[\\/]+sequence_definitions[\\/]+aiqs_sequence\.py$
'''
[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E203",  # whitespace before ':'
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501", "F401", "E402"]
"tests_orbis/*" = ["E501", "F401", "E402"]
"src_orbis/analysis_tools/*" = ["E501", "F401", "E402", "F811", "C414", "E722", "F841"]
"src_orbis/omf/dashboard/assets/html_templates.py" = ["E501"]
"src_orbis/omf/dashboard/components/*" = ["E501"]  # HTML template strings
"src_orbis/omf/dashboard/components/overview_inventory.py" = ["E501"]
"src_orbis/omf/dashboard/components/overview_purchase_order.py" = ["E501"]
"src_orbis/omf/dashboard/components/ccu_pairing.py" = ["E501"]
"src_orbis/omf/dashboard/components/ccu_state.py" = ["E501"]
"src_orbis/omf/dashboard/components/settings_mqtt_config.py" = ["E501"]


[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
known_first_party = ["src_orbis"]

[tool.pytest.ini_options]
testpaths = ["tests_orbis"]          # nur hier sammelt Pytest Tests
addopts = "-q"
